fix: 로또 숫자 정렬을 위해 Mutable 하게 수정